--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,35 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+
+# Burger-Remake
+
+
+
+
+
+
+
+
+
+<h2>Ekran goruntusu</h2>
+
+ Bu proje bir Hamburger Restoranı projesidir.
+
+# Kullanılan Teknolojiler
+
+- JSX(JavaScriptXML) React bileşenlerini tanımlamak için       kullandım 
+
+- Stillendirme için Css kullandım
+
+- SPA uygulamaları için React-Router-Dom teknolojisini kullandım
+
+- Bu proje Hamburger Restoranı projesidir
+
+
+
+
+
+![](BurgerRemake.gif)
